tests/parser_cases/invalid/if_missing_end.ob0
MODULE Main;
BEGIN
  IF 1 THEN
    WriteInt(1)
END Main.
